--- a/animation/listAnimation.html
+++ b/animation/listAnimation.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="xh-CN">
+<html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
     <link type="text/css" rel="stylesheet" href="../lib/animate.css"/>
@@ -10,6 +10,9 @@
     <!--
 
     -->
+    <dia>
+
+    </div>
     <style>
         .lst-enter, .lst-leave-to {
             opacity: 0;
