--- a/props/notPropsProperties.html
+++ b/props/notPropsProperties.html
@@ -8,7 +8,8 @@
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue-resource@1.5.1"></script>
     <!--
-
+        非props特性即没有在子组件中显式声明的特性
+        具体参考官网,官网已经解释很清楚了
     -->
 </head>
 <body>
